Вынести преобразования в маппер, добавить default блок, сделать проверку на бронирование в будущем,на время начала и конца бронирования в будущем, оптимизировать код необходимыми аннотациями