@@ -1,6 +1,8 @@
 package ru.practicum.shareit.user.service;
 
+import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 import ru.practicum.shareit.exception.EmailAlreadyExistsException;
 import ru.practicum.shareit.exception.NotFoundException;
 import ru.practicum.shareit.user.dto.UserDto;
@@ -8,19 +10,16 @@ import ru.practicum.shareit.user.mapper.UserMapper;
 import ru.practicum.shareit.user.repository.UserRepository;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
+@RequiredArgsConstructor
+@Transactional(readOnly = true)
 public class UserServiceImpl implements UserService {
 
     private final UserRepository repository;
 
-    public UserServiceImpl(UserRepository repository) {
-        this.repository = repository;
-    }
-
-
     @Override
+    @Transactional
     public UserDto create(UserDto userDto) {
         repository.findByEmailIgnoreCase(userDto.getEmail()).ifPresent(user -> {
             throw new EmailAlreadyExistsException("Email already exists: " + userDto.getEmail());
@@ -32,6 +31,7 @@ public class UserServiceImpl implements UserService {
     }
 
     @Override
+    @Transactional
     public UserDto update(Long userId, UserDto userDto) {
         var user = repository.findById(userId)
                 .orElseThrow(() -> new NotFoundException("User not found: " + userId));
@@ -42,7 +42,9 @@ public class UserServiceImpl implements UserService {
             });
             user.setEmail(userDto.getEmail());
         }
-        if (userDto.getName() != null) user.setName(userDto.getName());
+        if (userDto.getName() != null) {
+            user.setName(userDto.getName());
+        }
 
         user = repository.save(user);
         return UserMapper.toUserDto(user);
@@ -59,10 +61,11 @@ public class UserServiceImpl implements UserService {
     public List<UserDto> getAll() {
         return repository.findAll().stream()
                 .map(UserMapper::toUserDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
+    @Transactional
     public void delete(Long userId) {
         repository.deleteById(userId);
     }
